--- a/OnlineRadio.GUI/MainWindow.xaml
+++ b/OnlineRadio.GUI/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OnlineRadio.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"  Width="500" Height="500">
+        Title="OnlineRadio"  Width="500" Height="500">
     <StackPanel>
         <StackPanel Name="ManageSourcesPanel" Height="28" HorizontalAlignment="Left" Orientation="Horizontal" VerticalAlignment="Top">
             <ComboBox Name="SelectSourceCombo" HorizontalAlignment="Left" Width="200"/>
