--- a/OnlineRadio.GUI/MainWindow.xaml
+++ b/OnlineRadio.GUI/MainWindow.xaml
@@ -2,36 +2,41 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Width="500" Height="500" Closed="Window_Closed">
-    <StackPanel>
-        <StackPanel Name="ManageSourcesPanel" Height="28" HorizontalAlignment="Left" Orientation="Horizontal" VerticalAlignment="Top">
-            <ComboBox Name="SelectSourceCombo" HorizontalAlignment="Left" Width="200"/>
-            <Button Name="PlaySourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="PlaySourceBtn_Click">
-                &#xE102;
-            </Button>
-            <Button Name="StopSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="StopSourceBtn_Click">
-                &#xE15B;
-            </Button>
-            <Button Name="AddSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="AddSourceBtn_Click">
-                &#xE109;
-            </Button>
-            <Button Name="EditSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="EditSourceBtn_Click">
-                &#xE104;
-            </Button>
-            <Button Name="RemoveSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="RemoveSourceBtn_Click">
-                &#xE108;
-            </Button>
-        </StackPanel>
-        <Grid>
-            <StackPanel Name="InfoPanel">
-                <StackPanel Orientation="Horizontal">
-                    <Label>Title: </Label>
-                    <Label Name="InfoTitleLbl"></Label>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <Label>Artist: </Label>
-                    <Label Name="InfoArtistLbl"></Label>
-                </StackPanel>
+    <DockPanel LastChildFill="False">
+        <StackPanel DockPanel.Dock="Top">
+            <StackPanel Name="ManageSourcesPanel" Height="28" HorizontalAlignment="Left" Orientation="Horizontal" VerticalAlignment="Top">
+                <ComboBox Name="SelectSourceCombo" HorizontalAlignment="Left" Width="200"/>
+                <Button Name="PlaySourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="PlaySourceBtn_Click">
+                    &#xE102;
+                </Button>
+                <Button Name="StopSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="StopSourceBtn_Click">
+                    &#xE15B;
+                </Button>
+                <Button Name="AddSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="AddSourceBtn_Click">
+                    &#xE109;
+                </Button>
+                <Button Name="EditSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="EditSourceBtn_Click">
+                    &#xE104;
+                </Button>
+                <Button Name="RemoveSourceBtn" Width="28" Margin="10,0,0,0" FontFamily="Segoe UI Symbol" Click="RemoveSourceBtn_Click">
+                    &#xE108;
+                </Button>
             </StackPanel>
-        </Grid>
-    </StackPanel>
+            <Grid>
+                <StackPanel Name="InfoPanel">
+                    <StackPanel Orientation="Horizontal">
+                        <Label>Title: </Label>
+                        <Label Name="InfoTitleLbl"></Label>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Label>Artist: </Label>
+                        <Label Name="InfoArtistLbl"></Label>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
+        <StatusBar Name="statusBar" Height="30" DockPanel.Dock="Bottom">
+            <Label Name="statusBarLabel" Width="300" Padding="0,0"></Label>
+        </StatusBar>
+    </DockPanel>
 </Window>
