--- a/OnlineRadio.GUI/MainWindow.xaml
+++ b/OnlineRadio.GUI/MainWindow.xaml
@@ -22,8 +22,7 @@
                     &#xE108;
                 </Button>
             </StackPanel>
-            <Grid>
-                <StackPanel Name="InfoPanel">
+            <StackPanel Name="InfoPanel">
                     <StackPanel Orientation="Horizontal">
                         <Label>Title: </Label>
                         <Label Name="InfoTitleLbl"></Label>
@@ -33,6 +32,11 @@
                         <Label Name="InfoArtistLbl"></Label>
                     </StackPanel>
                 </StackPanel>
+            <Grid Name="PluginsGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
             </Grid>
         </StackPanel>
         <StatusBar Name="statusBar" Height="30" DockPanel.Dock="Bottom">
