Load lyrics from online services
Load lyrics from online services, fill the "apikey" value in the OnlineRadio.Plugins.Lyrics app.config file to correctly load the lyrics. The plugin uses Newtonsoft.Json v5.0.6 to parse the json result.

--- a/OnlineRadio.Plugins.Lyrics/LyricsPlugin.xaml
+++ b/OnlineRadio.Plugins.Lyrics/LyricsPlugin.xaml
@@ -6,5 +6,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <TextBlock Name="LyricsText" TextWrapping="Wrap" />
     </Grid>
 </UserControl>
