--- a/OnlineRadio.GUI/MainWindow.xaml
+++ b/OnlineRadio.GUI/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="OnlineRadio.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Width="500" Height="500" Closed="Window_Closed">
-    <DockPanel LastChildFill="False">
+        Width="500" Height="500" Closed="Window_Closed" MinWidth="406" MinHeight="160">
+    <DockPanel>
         <StackPanel DockPanel.Dock="Top">
             <StackPanel Name="ManageSourcesPanel" Height="28" HorizontalAlignment="Left" Orientation="Horizontal" VerticalAlignment="Top">
                 <ComboBox Name="SelectSourceCombo" HorizontalAlignment="Left" Width="200"/>
@@ -32,15 +32,17 @@
                         <Label Name="InfoArtistLbl"></Label>
                     </StackPanel>
                 </StackPanel>
+        </StackPanel>
+        <StatusBar Name="statusBar" Height="30" DockPanel.Dock="Bottom">
+            <Label Name="statusBarLabel" Padding="0,0"></Label>
+        </StatusBar>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
             <Grid Name="PluginsGrid">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
             </Grid>
-        </StackPanel>
-        <StatusBar Name="statusBar" Height="30" DockPanel.Dock="Bottom">
-            <Label Name="statusBarLabel" Width="300" Padding="0,0"></Label>
-        </StatusBar>
+        </ScrollViewer>
     </DockPanel>
 </Window>
