--- a/OnlineRadio.GUI/SourceWindow.xaml
+++ b/OnlineRadio.GUI/SourceWindow.xaml
@@ -12,9 +12,9 @@
                 <ColumnDefinition Width="50" />
                 <ColumnDefinition Width="121*" />
             </Grid.ColumnDefinitions>
-            <Label Grid.Row="0" Grid.Column="0">Name:</Label>
+            <TextBlock Grid.Row="0" Grid.Column="0">Name:</TextBlock>
             <TextBox Name="NameBox" Grid.Row="0" Grid.Column="1"/>
-            <Label Grid.Row="1" Grid.Column="0">Url :</Label>
+            <TextBlock Grid.Row="1" Grid.Column="0">Url :</TextBlock>
             <TextBox Name="UrlBox" Grid.Row="1" Grid.Column="1"/>
         </Grid>
         <DockPanel LastChildFill="False" Height="28" DockPanel.Dock="Bottom" Margin="0,0,0,10">
