Add Play/Stop buttons in Win7+ taskbar

--- a/OnlineRadio.GUI/MainWindow.xaml
+++ b/OnlineRadio.GUI/MainWindow.xaml
@@ -45,4 +45,14 @@
             </Grid>
         </ScrollViewer>
     </DockPanel>
+    <Window.TaskbarItemInfo>
+        <TaskbarItemInfo>
+            <TaskbarItemInfo.ThumbButtonInfos>
+                <ThumbButtonInfoCollection>
+                    <ThumbButtonInfo Click="StopSourceBtn_Click" ImageSource="Resources/stop.png" />
+                    <ThumbButtonInfo Click="PlaySourceBtn_Click" ImageSource="Resources/play.png" />
+                </ThumbButtonInfoCollection>
+            </TaskbarItemInfo.ThumbButtonInfos>
+        </TaskbarItemInfo>
+    </Window.TaskbarItemInfo>
 </Window>
