--- a/OnlineRadio.GUI/SourceWindow.xaml
+++ b/OnlineRadio.GUI/SourceWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="OnlineRadio.GUI.SourceWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SourceWindow" Height="137" Width="300">
+        Title="SourceWindow" Width="300" SizeToContent="Height">
     <DockPanel LastChildFill="False">
         <Grid DockPanel.Dock="Top">
             <Grid.RowDefinitions>
                 <RowDefinition Height="28" />
                 <RowDefinition Height="28" />
+                <RowDefinition Height="28*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="50" />
@@ -16,6 +17,8 @@
             <TextBox Name="NameBox" Grid.Row="0" Grid.Column="1"/>
             <TextBlock Grid.Row="1" Grid.Column="0">Url :</TextBlock>
             <TextBox Name="UrlBox" Grid.Row="1" Grid.Column="1"/>
+            <TextBlock Grid.Row="2" Grid.Column="0" TextWrapping="Wrap">Artist / Title inverted:</TextBlock>
+            <CheckBox Name="ArtistTitleOrderInvertedBox" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" />
         </Grid>
         <DockPanel LastChildFill="False" Height="28" DockPanel.Dock="Bottom" Margin="0,0,0,10">
             <Button Name="OkBtn" DockPanel.Dock="Left" Width="50" Margin="30,0,0,0" Click="OkBtn_Click">Ok</Button>
